--- a/public/indexs.html
+++ b/public/indexs.html
@@ -207,7 +207,7 @@
     
     // Connect to WebSocket
     function connect() {
-      ws = new WebSocket(`ws://localhost:4000`);
+      ws = new WebSocket(`ws://103.59.160.21:4000`);
       
       ws.onopen = () => {
         updateConnectionStatus(true);
